<resources>
    <string name="app_name">The Rhombus</string>
    <string name="title">The Rhombus</string>
    <!-- Threshold -->
    <string name="thresholdCaption">The Rhombus</string>
    <string name="thresholdStartButton">Start</string>
    <!-- Authorise -->
    <string name="authoriseCaption">Authorisation</string>
    <string name="authoriseNickname">Nickname:</string>
    <string name="authoriseAcceptButton">Accept</string>
    <!-- MainMenu -->
    <string name="mainMenuCaption">The Rhombus</string>
    <string name="mainMenuButton1">Campaign</string>
    <string name="mainMenuButton2">Custom</string>
    <string name="mainMenuButton3">Settings</string>
    <string name="mainMenuButton4">Exit</string>
    <string name="mainMenuBackButton">Back</string>
    <!-- Campaign -->
    <string name="campaignCaption">Campaign</string>
    <!-- CustomGame -->
    <string name="customGameCaption">Custom Game</string>
    <string name="customGameMode">Mode</string>
    <string name="customGameModePvp">Pvp</string>
    <string name="customGameModePve">Pve</string>
    <string name="customGameAddTurn">Addition turn</string>
    <string name="customGameFieldForm">Field form</string>
    <string name="customGameStartButton">Start</string>
    <string-array name="fieldForms">
        <item>rectangle</item>
        <item>rhombus</item>
        <item>triangle</item>
    </string-array>
    <string name="customGameFieldSize">Field size</string>
    <string name="customGamePlus">+</string>
    <string name="customGameMinus">-</string>
    <string name="customGameDefaultFormHW">3:3</string>
    <!-- Shop -->
    <!-- Settings -->
    <string name="settingsText1">Player image</string>
    <string name="settingsPlayerImageViewDescription">Player image</string>
    <!-- Game -->
    <string name="zeroGamePointsOne">0</string>
    <string name="dotsGamePoints">:</string>
    <string name="zeroGamePointsTwo">0</string>
    <string name="cBT1">1</string>
    <string name="cBT2">2</string>
    <string name="cBT3">3</string>
    <string name="cBT4">4</string>
    <string name="cBT5">5</string>
    <string name="cBT6">6</string>
    <string name="cBT7">7</string>
    <string name="cBT8">8</string>
    <string name="cBT9">9</string>
    <string name="cBT10">10</string>
    <string name="cBT11">11</string>
    <string name="cBT12">12</string>
    <string name="cBT13">13</string>
    <string name="cBT14">14</string>
    <string name="cBT15">15</string>
    <string name="cBT16">16</string>

    <string name="shop">Shop</string>
    <string name="buy_theme">Purchase confirmation</string>
    <string name="buy_mes">Click OK to buy</string>
</resources>
