<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomGame">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customGameCaption"
                android:textAlignment="center"
                android:textSize="@dimen/customGameCaptionTextSize"
                android:layout_marginBottom="@dimen/customGameCaptionMarginBottom"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start"
                android:padding="@dimen/customGamePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customGameMode"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/customGameTextSize"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonPvp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/customGameModePvp"
                        android:textSize="@dimen/customGameTextSize" />

                    <RadioButton
                        android:id="@+id/radioButtonPve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/customGameMarginStart"
                        android:layout_weight="1"
                        android:layout_gravity="right"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/customGameModePve"
                        android:textSize="@dimen/customGameTextSize" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="start"
                android:layout_marginTop="10dp"
                android:padding="@dimen/customGamePadding">

                <Switch
                    android:id="@+id/switchAdditionTurn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customGameAddTurn"
                    android:textSize="@dimen/customGameTextSize"
                    android:checked="true"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:layout_marginTop="10dp"
                android:padding="@dimen/customGamePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customGameFieldForm"
                    android:textAlignment="center"
                    android:textSize="@dimen/customGameTextSize"/>

                <Spinner
                    android:id="@+id/spinnerFieldForm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/customGameMarginStart"
                    android:popupBackground="@drawable/bg"
                    android:entries="@array/fieldForms"
                    android:textSize="@dimen/customGameTextSize"/>
            </LinearLayout>
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/customGamePadding"
                android:columnCount="3"
                android:rowCount="3">

                <Button
                    android:id="@+id/heightIncButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="@string/customGamePlus"
                    android:textSize="@dimen/customGameTextSize"
                    android:onClick="onFormHeightInc"/>
                <Button
                    android:id="@+id/heightDecButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="@string/customGameMinus"
                    android:textSize="@dimen/customGameTextSize"
                    android:onClick="onFormHeightDec"/>
                <Button
                    android:id="@+id/widthIncButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/customGameMinus"
                    android:textSize="@dimen/customGameTextSize"
                    android:onClick="onFormWidthDec"/>
                <Button
                    android:id="@+id/widthDecButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:text="@string/customGamePlus"
                    android:textSize="@dimen/customGameTextSize"
                    android:onClick="onFormWidthInc"/>

                <TextView
                    android:id="@+id/fieldFormHW"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:text="@string/customGameDefaultFormHW"
                    android:textSize="@dimen/customGameTextSize"/>

            </GridLayout>

            <Button
                android:id="@+id/startCustomGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/customGamePadding"
                android:text="@string/customGameStartButton"
                android:textSize="@dimen/customGameTextSize"
                android:onClick="onStartCustomGameClick"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>